--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "three.js-typescript-boilerplate",
+  "name": "three.js-portfolio-site",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config src/client/webpack.prod.js",
-    "dev": "webpack serve --config src/client/webpack.dev.js",
+    "copy-assets": "npx fse emptyDir ./dist/client/models && npx fse copy ./src/client/models ./dist/client/models",
+    "build": "npm run copy-assets && webpack --config src/client/webpack.prod.js",
+    "dev": "npm run copy-assets && webpack serve --config src/client/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server/server.js"
+    "start": "npm run copy-assets && node dist/server/server.js"
   },
   "author": "Sean Bradley",
   "license": "ISC",
@@ -24,6 +25,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "@atao60/fse-cli": "^0.1.7",
+    "express": "^4.17.3",
+    "fs-extra": "^10.1.0"
   }
 }
